<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.Profile">



    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/apbarLoy3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="?attr/actionBarSize"

            />
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/profile"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:navigationIcon="@drawable/ic_return2"
            style="@style/Widget.MaterialComponents.Toolbar"
            />
    </com.google.android.material.appbar.AppBarLayout>







    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_marginTop="200dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profilephoto"
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:srcCompat="@drawable/profile"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:contentDescription="@string/profilephoto"
                app:layout_constraintTop_toBottomOf="@id/apbarLoy3"
                android:layout_gravity="center_horizontal"

                />
          <!--  <TextView
                android:id="@+id/changename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@id/profilephoto"
                android:layout_marginTop="24dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"

                />-->

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="35dp"
                android:text="@string/text_changeNameUsser"
                android:textColor="#696969"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="35dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tichangeNameUser"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_person"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="12dp"
                        android:hint="@string/cambiarNombreUsuario"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbDetonadorEnableEditextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_enable_pass"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="12dp"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_changePassProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_passwordProfile"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="35dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>





            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_changePassProfile2"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_passwordProfile2"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="35dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>



            <Button
                android:id="@+id/button_signin"
                style="@style/Button1"
                android:layout_width="342dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="14dp"
                android:text="@string/button_sign_in" />




        </LinearLayout>


    </RelativeLayout>





</androidx.constraintlayout.widget.ConstraintLayout>